@@ -1,3 +1,15 @@
+2007-12-18  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/tcp.c: (gnet_tcp_socket_get_remote_inetaddr):
+	* src/udp.c: (gnet_udp_socket_unref):
+	  Two small doc additions.
+
+	* doc/tmpl/conn-http.sgml:
+	* doc/tmpl/conn.sgml:
+	* doc/tmpl/inetaddr.sgml:
+	* doc/tmpl/tcp.sgml:
+	  Update templates to trunk.
+
 2007-12-14  Tim-Philipp Müller  <tim at centricular dot net>
 
 	Patch by: Jeff Garzik <jeff at garzik org>.
